@@ -16,6 +16,7 @@
     * JSONGeneratorResponse is defined as extras
     * OpenAPI tests fix - better openapi example
     * Request.hostname contains only hostname without port
+    * Request.timestamp - set as soon as possible
 
 ==== 2.2.0 ====
     * openapi after_request example fix
